deploy/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test
  labels:
    app.kubernetes.io/part-of: xxx-service
