deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xxx-service
  namespace: test
  labels:
    app.kubernetes.io/name: xxx-service
    app.kubernetes.io/part-of: xxx-service
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
    - name: grpc
      port: 9000
      targetPort: grpc
      protocol: TCP
  selector:
    app.kubernetes.io/name: xxx-service
